css/style.css
/* COLORSCHEME */

:root {
    /* primitives */
    --grey50: #F2F2F2;
    --grey100: #A6A6A6;
    --grey150: #262626;
    --grey200: #1D1D1D;
    
    /* tokens */
    --html_bg: var(--grey200);
    --body_bg: var(--grey200);
    --nav_bg: var(--grey200);
    --main_bg: var(--grey200);
    --heading_color: var(--grey50);
    --button_border: var(--grey50);
    --button_bg: var(--grey200);
    --button_color: var(--grey50);
    --link_color: var(--grey100);
    --link_color_hover: var(--grey50);
    --link_color_current: var(--grey50);
    --menu_bg: var(--grey150);
    --text_color: var(--grey50);
    --info_bg_color: #1d1d1dac;
    --list_color: var(--grey50);
    --burger_color: var(--grey50);
}

/* FONTS */
@font-face {
    font-family: "Helvetica Neue";
    src: url("../fonts/helveticaneue.woff2");
}

/* HERO */
.hero {
    color: var(--heading_color);
    font-family: "Helvetica Neue";
    font-weight: 700;
    font-style: normal;
    font-size: 3rem;
    text-shadow: 5px 5px 5px var(--grey150);
}

/* H1 */
h1 {
    color: var(--heading_color);
    font-family: "Helvetica Neue";
    font-size: 3rem;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

/* H2 */
h2 {
    color: var(--heading_color);
    font-family: "Helvetica Neue";
    font-size: 2rem;
    font-weight: 700;
    text-shadow: 5px 5px 5px var(--grey150); 
}

/* H3 */
h3 {
    color: var(--heading_color);
    font-family: "Helvetica Neue";
    font-size: 1.5rem;
    font-weight: 700;
    margin-bottom: 1rem;
}

/* Paragrafs */
p {
    color: var(--text_color);
    font-family: "EB Garamond";
    font-size: 1.25rem;
    font-style: normal;
    font-weight: 500;
    line-height: 150%;
    word-break: normal;
    text-wrap: pretty;
    overflow-wrap: break-word;
    hyphens: auto;
    margin: 0rem 0.5rem 0rem 0.5rem;
}

/* FONT-SIZES */
@media (min-width: 550px) {
    .hero {
        font-size: 4rem;
    }

}

@media (min-width: 800px) {
    .hero {
        font-size: 5rem;
    }

    h1 {
        font-size: 4rem;
    }

}

@media (min-width: 1200px) {

    .hero {
        font-size: 8rem;
    }
    
    .hero#quote {
        font-size: 5rem;
        margin: 0 10vw 0 10vw;
    }
}

/* HTML */
html {
    background-color: var(--html_bg);
}

/* BODY */
body {
    background-color: var(--body_bg);
}

/* MAIN */
main {
    background-color: var(--main_bg);
}

/* LINKS */
a {
    text-decoration: none;
    color: var(--link_color);
}

/* BUTTONS */
.button {
    color: var(--button_color);
    background-color: var(--button_bg);
    border: var(--button_border) 2px solid;
    height: 3.5rem;
    width: 13rem;
    padding-top: 0.5rem;
    text-align: center;
    font-family: 'EB Garamond';
    font-style: italic;
    font-weight: 400;
    font-size: 1.5rem;
    box-shadow: 8px 8px 5px #1D1D1D;
}

.button:hover {
    color: var(--button_bg);
    background-color: var(--button_color);
    transition: 0.5s;
}

.button a {
    text-decoration: none;
}

/* INFO BOX */
@media (min-width: 1000px) {
    .info_box {
        background-color: var(--info_bg_color);
    }
}

/* LISTS */
ul {
    color: var(--list_color);
    font-family: "EB Garamond";
    font-size: 1.25rem;
    font-weight: 500;
    line-height: 150%;
    list-style-type: none;
}

